Prepared for deployment: Added Dockerfile and updated properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=QuizLynx
 #spring.datasource.username=${SPRING_DATASOURCE_USER}
 #spring.jpa.show-sql=true
 #spring.datasource.password=${SPRING_DATASOURCE_PASS}
-spring.datasource.url=jdbc:postgresql://localhost:5432/QuizLynx
-spring.datasource.username=${SPRING_DATASOURCE_USER}
-spring.datasource.password=${SPRING_DATASOURCE_PASS}
+spring.datasource.url=jdbc:postgresql://ep-autumn-band-ahlwk367-pooler.c-3.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_bl3wpCg7fAMv&sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_bl3wpCg7fAMv
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
