--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ jwt.secret=${JWT_SECRET}
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=https://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
 spring.security.oauth2.client.registration.google.authorization-grant-type=${AUTH_GRANT_TYPE}
 spring.security.oauth2.client.registration.google.client-authentication-method=${CLIENT_AUTH_METHOD}
 
@@ -83,3 +83,6 @@ server.ssl.key-alias=${SSL_KEY_ALIAS}
 gemini.api.key=${GEMINI_API_KEY}
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 jwt.refresh.expiration = ${REFRESH_EXPIRATION}
+
+//frontend
+frontend.url=${FRONTEND_URL:http://localhost:4200}
