--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,12 +73,12 @@ otp.max.attempts = 5
 otp.resend.cooldown.seconds = 60
 
 
-server.port=8080
-server.ssl.enabled=true
-server.ssl.key-store=classpath:localhost-mkcert.p12
-server.ssl.key-store-password=${KEY_STORE_PASS}
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=${SSL_KEY_ALIAS}
+#server.port=8080
+#server.ssl.enabled=true
+#server.ssl.key-store=classpath:localhost-mkcert.p12
+#server.ssl.key-store-password=${KEY_STORE_PASS}
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=${SSL_KEY_ALIAS}
 
 gemini.api.key=${GEMINI_API_KEY}
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
