--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,7 +73,7 @@ otp.max.attempts = 5
 otp.resend.cooldown.seconds = 60
 
 
-#server.port=8080
+server.port=8080
 #server.ssl.enabled=true
 #server.ssl.key-store=classpath:localhost-mkcert.p12
 #server.ssl.key-store-password=${KEY_STORE_PASS}
