--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,13 +55,18 @@ logging.level.org.springframework.web.cors=DEBUG
 
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.port=465
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASS}
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
 spring.mail.from=${SPRING_MAIL_USERNAME}
+spring.mail.properties.mail.timeout=10000
 
 # Secret used to HMAC OTPs (store in env in prod)
 otp.hmac.secret = ${HMAC_SECRET}
