--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,13 +60,14 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASS}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=${MAIL_SMTP_SSL_ENABLE}
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.trust=smtp-relay.brevo.com
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.from=${SPRING_MAIL_USERNAME}
 spring.mail.properties.mail.timeout=10000
+
 
 # Secret used to HMAC OTPs (store in env in prod)
 otp.hmac.secret = ${HMAC_SECRET}
