changes in original email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,11 +61,12 @@ spring.mail.password=${SPRING_MAIL_PASS}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=${MAIL_SMTP_SSL_ENABLE}
 spring.mail.properties.mail.smtp.ssl.trust=smtp-relay.brevo.com
+admin.email=${ADMIN_EMAIL}
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.from=${SPRING_MAIL_USERNAME}
+spring.mail.from=${ADMIN_EMAIL}
 spring.mail.properties.mail.timeout=10000
 
 
