changes in some logs for less storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresPlusDialect
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
@@ -47,10 +47,10 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 # 4. Add these debugging configurations to your application.properties
 
 # Enable debug logging for OAuth2 and Security
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
-logging.level.com.projectJava.quizApp.config=DEBUG
-logging.level.org.springframework.web.cors=DEBUG
+logging.level.org.springframework.security=ERROR
+logging.level.org.springframework.security.oauth2=INFO
+logging.level.com.projectJava.quizApp.config=INFO
+logging.level.org.springframework.web.cors=INFO
 
 
 
